--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Welcome</title>
 
     <!-- Fav Icon -->
-    <link rel="icon" href="img/fav.png" />
+    <link rel="icon" href="img/fav.png" loading="lazy" />
 
     <!-- Include Owl-Carusol -->
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -90,6 +90,7 @@
                 data-aos="fade-right"
                 data-aos-duration="1200"
                 src="img/man.png"
+                loading="lazy"
                 alt="worker"
               />
             </div>
@@ -218,8 +219,6 @@
               class="logo_right"
               data-aos="fade-up"
               data-aos-anchor-placement="top-center"
-              data-aos-duration="300"
-              data-aos-delay="300"
             >
               <h4>Trusted by industry leaders around the World.</h4>
               <p>
@@ -289,9 +288,15 @@
                       data-aos-duration="600"
                       class="main_img"
                       src="img/cnt1x.png"
+                      loading="lazy"
                       alt=""
                     />
-                    <img class="sub_img" src="img/cnt1.png" alt="" />
+                    <img
+                      class="sub_img"
+                      src="img/cnt1.png"
+                      loading="lazy"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="solution_tab_cnt_one" id="tbTwo">
@@ -312,7 +317,12 @@
                     /></a>
                   </div>
                   <div class="solution_tab_cnt_one_right">
-                    <img class="sub_img" src="img/w1.png" alt="" />
+                    <img
+                      class="sub_img"
+                      src="img/w1.png"
+                      loading="lazy"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="solution_tab_cnt_one" id="tbThree">
@@ -329,7 +339,12 @@
                     /></a>
                   </div>
                   <div class="solution_tab_cnt_one_right">
-                    <img class="sub_img" src="img/w2.png" alt="" />
+                    <img
+                      class="sub_img"
+                      src="img/w2.png"
+                      loading="lazy"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="solution_tab_cnt_one" id="tbFour">
@@ -346,7 +361,12 @@
                     /></a>
                   </div>
                   <div class="solution_tab_cnt_one_right">
-                    <img class="sub_img" src="img/w3.png" alt="" />
+                    <img
+                      class="sub_img"
+                      src="img/w3.png"
+                      loading="lazy"
+                      alt=""
+                    />
                   </div>
                 </div>
               </div>
@@ -467,6 +487,7 @@
               data-aos-duration="800"
               data-aos-delay="400"
               src="img/server.png"
+              loading="lazy"
               alt=""
             />
           </div>
@@ -483,18 +504,10 @@
             <span data-aos="fade-left" data-aos-duration="600"
               >Tendering & Procurement</span
             >
-            <h4
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="600"
-            >
+            <h4 data-aos="fade-left" data-aos-duration="600">
               Say goodbye to paper, CD-Roms and external disk drives.
             </h4>
-            <p
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="800"
-            >
+            <p data-aos="fade-left" data-aos-duration="600">
               ProTenders is the only platform that gives you detailed
               information on all Middle East construction projects while also
               elevating your company profile to the regional and global
@@ -526,8 +539,9 @@
               data-aos="fade-down"
               data-aos-duration="600"
               class="driveImgActive"
-              id="ss3"
-              src="img/ss3.png"
+              id="ss1"
+              src="img/ss1.png"
+              loading="lazy"
               alt=""
             />
             <img
@@ -535,14 +549,15 @@
               data-aos-duration="600"
               id="ss2"
               src="img/ss2.png"
+              loading="lazy"
               alt=""
             />
             <img
               data-aos="fade-down"
               data-aos-duration="600"
-              class="driveImgActive"
-              id="ss1"
-              src="img/ss1.png"
+              id="ss3"
+              src="img/ss3.png"
+              loading="lazy"
               alt=""
             />
           </div>
@@ -559,33 +574,34 @@
             <img
               data-aos="fade-down"
               class="driveImgActive"
-              id="ss3"
-              src="img/ss3.png"
+              id="ss4"
+              src="img/ss1.png"
+              loading="lazy"
               alt=""
             />
-            <img data-aos-duration="600" id="ss2" src="img/ss2.png" alt="" />
             <img
-              class="driveImgActive"
-              class="driveImgActive"
-              id="ss1"
-              src="img/ss1.png"
+              data-aos="fade-down"
+              data-aos-duration="600"
+              id="ss5"
+              src="img/ss2.png"
+              loading="lazy"
+              alt=""
+            />
+            <img
+              data-aos="fade-down"
+              data-aos-duration="600"
+              id="ss6"
+              src="img/ss3.png"
+              loading="lazy"
               alt=""
             />
           </div>
           <div class="drive_left">
             <span data-aos="fade-left">Construction Intelligence</span>
-            <h4
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="600"
-            >
+            <h4 data-aos="fade-left" data-aos-duration="600">
               Stay ahead of the competition and win more projects.
             </h4>
-            <p
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="800"
-            >
+            <p data-aos="fade-left" data-aos-duration="600">
               ProTenders is the only platform that gives you detailed
               information on all Middle East construction projects while also
               elevating your company profile to the regional and global
@@ -593,13 +609,13 @@
             </p>
             <div class="drive_item">
               <ul>
-                <li class="driveItemActive" willOpen="ss1">
+                <li class="driveItemActive" willOpen="ss4">
                   <img src="img/oval.svg" alt="" />Solution Feature
                 </li>
-                <li willOpen="ss2">
+                <li willOpen="ss5">
                   <img src="img/oval.svg" alt="" />Solution Feature
                 </li>
-                <li willOpen="ss3">
+                <li willOpen="ss6">
                   <img src="img/oval.svg" alt="" />Solution Feature
                 </li>
               </ul>
@@ -621,18 +637,10 @@
         <div class="drive_wrapper">
           <div class="drive_left">
             <span data-aos="fade-left">Product Marketplace</span>
-            <h4
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="600"
-            >
+            <h4 data-aos="fade-left" data-aos-duration="600">
               Showcase your work and get specified.
             </h4>
-            <p
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="800"
-            >
+            <p data-aos="fade-left" data-aos-duration="600">
               ProTenders is the only platform that gives you detailed
               information on all Middle East construction projects while also
               elevating your company profile to the regional and global
@@ -662,8 +670,9 @@
               data-aos="fade-down"
               data-aos-duration="600"
               class="driveImgActive"
-              id="ss3"
-              src="img/ss3.png"
+              id="ss1"
+              src="img/ss1.png"
+              loading="lazy"
               alt=""
             />
             <img
@@ -671,14 +680,15 @@
               data-aos-duration="600"
               id="ss2"
               src="img/ss2.png"
+              loading="lazy"
               alt=""
             />
             <img
               data-aos="fade-down"
               data-aos-duration="600"
-              class="driveImgActive"
-              id="ss1"
-              src="img/ss1.png"
+              id="ss3"
+              src="img/ss3.png"
+              loading="lazy"
               alt=""
             />
           </div>
@@ -696,8 +706,9 @@
               data-aos="fade-down"
               data-aos-duration="600"
               class="driveImgActive"
-              id="ss3"
-              src="img/ss3.png"
+              id="ss1"
+              src="img/ss1.png"
+              loading="lazy"
               alt=""
             />
             <img
@@ -705,31 +716,24 @@
               data-aos-duration="600"
               id="ss2"
               src="img/ss2.png"
+              loading="lazy"
               alt=""
             />
             <img
               data-aos="fade-down"
               data-aos-duration="600"
-              class="driveImgActive"
-              id="ss1"
-              src="img/ss1.png"
+              id="ss3"
+              src="img/ss3.png"
+              loading="lazy"
               alt=""
             />
           </div>
           <div class="drive_left">
             <span data-aos="fade-left">Company Profiles</span>
-            <h4
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="600"
-            >
+            <h4 data-aos="fade-left" data-aos-duration="600">
               Get found and invited to tender.
             </h4>
-            <p
-              data-aos="fade-left"
-              data-aos-duration="600"
-              data-aos-delay="800"
-            >
+            <p data-aos="fade-left" data-aos-duration="600">
               ProTenders is the only platform that gives you detailed
               information on all Middle East construction projects while also
               elevating your company profile to the regional and global
@@ -776,7 +780,7 @@
               <span></span>
               <div class="testiman">
                 <div class="testiman_left">
-                  <img src="img/client.png" alt="" />
+                  <img src="img/client.png" loading="lazy" alt="" />
                 </div>
                 <div class="testiman_right">
                   <h4>Enrico Ferri</h4>
@@ -798,7 +802,7 @@
               <span></span>
               <div class="testiman">
                 <div class="testiman_left">
-                  <img src="img/client.png" alt="" />
+                  <img src="img/client.png" loading="lazy" alt="" />
                 </div>
                 <div class="testiman_right">
                   <h4>Enrico Ferri</h4>
@@ -820,7 +824,7 @@
               <span></span>
               <div class="testiman">
                 <div class="testiman_left">
-                  <img src="img/client.png" alt="" />
+                  <img src="img/client.png" loading="lazy" alt="" />
                 </div>
                 <div class="testiman_right">
                   <h4>Enrico Ferri</h4>
@@ -839,7 +843,12 @@
       <div class="container">
         <div class="demo_wrapper">
           <div class="demo_left">
-            <img data-aos="fade-left" src="img/demo.png" alt="" />
+            <img
+              data-aos="fade-left"
+              src="img/demo.png"
+              loading="lazy"
+              alt=""
+            />
           </div>
           <div class="demo_right" data-aos="fade-right">
             <h2>Ready for a demo?</h2>
@@ -941,7 +950,9 @@
     </script>
 
     <script>
-      AOS.init();
+      AOS.init({
+        once: true,
+      });
     </script>
   </body>
 </html>
